# HR360_report

./: .gitignore  columns.txt  pyproject.toml  roles.txt
app/: __init__.py  admin_config.json  config.py  main.py
app/models/: __init__.py  schemas.py
app/routers/: report.py
app/services/: data_parser.py  llm_analyzer.py  report_generator.py  score_calculator.py
app/static/css/: main.css  report.css
app/static/js/: app.js
app/templates/: admin.html  index.html  report.html
